--- a/code/index.html
+++ b/code/index.html
@@ -3,20 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
+    <header class="header"> header </header>
+    <div class="container">
+      <main class="main"> main</main>
+      <aside class="aside"> aside</aside>
+    </div>
+    
+    <footer class="footer"> footer </footer>
   </body>
 </html>
