first commit, todo and css responsive

--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>The newsroom: &#128240</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
@@ -15,8 +15,22 @@
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="flex-container">
       <!-- The other news  -->
+
+      <article class="small-card">
+        <p>TEST</p>
+      </article>
     </section>
   </body>
 </html>
+
+<!-- TODO -->
+<!-- 
+1. Decide a them: Board games?
+2. Read about flex box
+3. Read about responsive code
+4. Create a mockup with flexbox thats responsive
+5. STATUS
+
+ -->
