--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>The newsroom: &#128240</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   </head>
   <body>
     <header>
@@ -19,8 +19,38 @@
       <!-- The other news  -->
 
       <article class="small-card">
-        <p>TEST</p>
+        <img src="../img/DT_2020.jpg" alt="">
+        <p class="small-text">DONALT TRUMP RE-ELECTED AS PRESIDENT FOR THE UNITED STATES OF AMERICA!</p>
       </article>
+
+      <article class="small-card">
+        <p class="small-text">ART 2</p>
+      </article>
+
+      <article class="small-card">
+        <p class="small-text">ART 3</p>
+      </article>
+
+      <article class="small-card">
+        <p class="small-text">ART 4</p>
+      </article>
+
+      <article class="small-card">
+        <p class="small-text">ART 5</p>
+      </article>
+
+      <article class="small-card">
+        <p class="small-text">ART 6</p>
+      </article>
+
+      <article class="small-card">
+        <p class="small-text">ART 7</p>
+      </article>
+
+      <article class="small-card">
+        <p class="small-text">ART 8</p>
+      </article>
+
     </section>
   </body>
 </html>
@@ -32,5 +62,9 @@
 3. Read about responsive code
 4. Create a mockup with flexbox thats responsive
 5. STATUS
+
+Donald trump re-elected? rickrolled link?
+Ernst?
+
 
  -->
