created html and css for mobile

--- a/code/index.html
+++ b/code/index.html
@@ -2,64 +2,110 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>The newsroom: &#128240</title>
+    <title>The ClickBait: &#128240</title>
     <link rel="stylesheet" href="./style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   </head>
   <body>
-    <header>
+    <header id="top">
       <!-- Some kind of logo and navbar -->
     </header>
 
-    <section class="big-news">
+    <section class="flex-container">
       <!-- The big news content -->
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <article class="large-card">
+          <img src="../img/DT_2020_CROPPED.jpg" alt="">
+          <h3 class="large-h3 class="small-h3"">Breaking News!</h3>
+          <p class="large-text">Donalt Trump re-elected! </p>
+        </article>
+      </a>
     </section>
+
+
 
     <section class="flex-container">
       <!-- The other news  -->
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <article class="small-card">
+          <img src="../img/DT_2020.jpg" alt="">
+          <h3 class="small-h3">Breaking News!</h3>
+          <p class="small-text">Donalt Trump re-elected! </p>
+        </article>
+      </a>
 
-      <article class="small-card">
-        <img src="../img/DT_2020.jpg" alt="">
-        <p class="small-text">DONALT TRUMP RE-ELECTED AS PRESIDENT FOR THE UNITED STATES OF AMERICA!</p>
-      </article>
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <article class="small-card">
+          <img src="../img/DT_2020.jpg" alt="">
+          <h3 class="small-h3">Breaking News!</h3>
+          <p class="small-text">Donalt Trump re-elected! </p>
+        </article>
+      </a>
 
-      <article class="small-card">
-        <p class="small-text">ART 2</p>
-      </article>
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <article class="small-card">
+          <img src="../img/DT_2020.jpg" alt="">
+          <h3 class="small-h3">Breaking News!</h3>
+          <p class="small-text">Donalt Trump re-elected! </p>
+        </article>
+      </a>
 
-      <article class="small-card">
-        <p class="small-text">ART 3</p>
-      </article>
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <article class="small-card">
+          <img src="../img/DT_2020.jpg" alt="">
+          <h3 class="small-h3">Breaking News!</h3>
+          <p class="small-text">Donalt Trump re-elected! </p>
+        </article>
+      </a>
 
-      <article class="small-card">
-        <p class="small-text">ART 4</p>
-      </article>
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <article class="small-card">
+          <img src="../img/DT_2020.jpg" alt="">
+          <h3 class="small-h3">Breaking News!</h3>
+          <p class="small-text">Donalt Trump re-elected! </p>
+        </article>
+      </a>
 
-      <article class="small-card">
-        <p class="small-text">ART 5</p>
-      </article>
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <article class="small-card">
+          <img src="../img/DT_2020.jpg" alt="">
+          <h3 class="small-h3">Breaking News!</h3 class="small-h3">
+          <p class="small-text">Donalt Trump re-elected! </p>
+        </article>
+      </a>
 
-      <article class="small-card">
-        <p class="small-text">ART 6</p>
-      </article>
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <article class="small-card">
+          <img src="../img/DT_2020.jpg" alt="">
+          <h3 class="small-h3">Breaking News!</h3>
+          <p class="small-text">Donalt Trump re-elected! </p>
+        </article>
+      </a>
 
-      <article class="small-card">
-        <p class="small-text">ART 7</p>
-      </article>
-
-      <article class="small-card">
-        <p class="small-text">ART 8</p>
-      </article>
-
+      <a href="http://" target="_blank" rel="noopener noreferrer">
+        <article class="small-card">
+          <img src="../img/DT_2020.jpg" alt="">
+          <h3 class="small-h3">Breaking News!</h3>
+          <p class="small-text">Donalt Trump re-elected! </p>
+        </article>
+      </a>
     </section>
+
+    <footer>
+      <!-- Anchor tag and link to get back up -->
+      <!-- Team Elephants! -->
+      <!-- Github, linkedin links? -->
+      <a href="#top">Go to top</a>
+    </footer>
+
   </body>
 </html>
 
 <!-- TODO -->
 <!-- 
-1. Decide a them: Board games?
-2. Read about flex box
-3. Read about responsive code
+1. Decide a them: Clickbait
+*. IMG thumbnails on mobile?
 4. Create a mockup with flexbox thats responsive
 5. STATUS
 
