Mobile mockup almost done

--- a/code/index.html
+++ b/code/index.html
@@ -8,17 +8,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   </head>
   <body>
-    <header id="top">
+    <header class="" id="top">
+
+      <figure class="">
+        <img src="../img/logo.svg" alt="" class="">
+      </figure>
+
+      <section class="">
+        <a href="http://" target="_blank" rel="noopener noreferrer" class="exclude">Link 1</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer" class="exclude">Link 2</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer" class="exclude">Link 3</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer" class="exclude">Link 4</a>
+      </section>
       <!-- Some kind of logo and navbar -->
+
     </header>
 
     <section class="flex-container">
       <!-- The big news content -->
-      <a href="http://" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">
         <article class="large-card">
           <img src="../img/DT_2020_CROPPED.jpg" alt="">
           <h3 class="large-h3 class="small-h3"">Breaking News!</h3>
-          <p class="large-text">Donalt Trump re-elected! </p>
+            <p class="large-text">Donalt Trump re-elected! <br>
+          See his opening speach right hear
+          </p>
         </article>
       </a>
     </section>
@@ -92,11 +106,12 @@
       </a>
     </section>
 
-    <footer>
+    <footer class="">
       <!-- Anchor tag and link to get back up -->
       <!-- Team Elephants! -->
       <!-- Github, linkedin links? -->
-      <a href="#top">Go to top</a>
+      <a href="#top" class="footer-link">Back to top</a>
+      <p class="footer-text">&#128024;</p>
     </footer>
 
   </body>
