used another model that worked

--- a/code/index.html
+++ b/code/index.html
@@ -10,24 +10,70 @@
 </head>
 
 <body>
-  <header>
-    <!-- Some kind of logo and navbar -->
-    <div class="topnav">
-      <a href="#">Link</a>
-      <a href="#">Link</a>
-      <a href="#">Link</a>
-    </div>
-  </header>
-  <main>
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+  <div class="container">
+    <header>
+      <h1>Header</h1>
+      <p>Resize the browser window to see the responsive effect.</p>
+      <!-- Some kind of logo and navbar -->
+      <div class="topnav">
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+      </div>
+    </header>
+    <main>
+      <section class="big-news">
+        <!-- The big news content -->
+        <img src="">
 
-    <section class="small-news">
-      <!-- The other news  -->
-    </section>
-  </main>
+        <div class="row">
 
+          <div class="column">
+
+
+            <img src="dogs.jpg" alt="no picture" class="column">
+            <h2 class="column">Main Content</h2>
+            <p class="column">Lorem adipiscing elit. Maecenas sit amet pretium urna.
+            </p>
+
+          </div>
+
+          <div class="column">
+
+            <img src="bridge.jpeg" alt="no picture" class="column">
+            <h2 class="column">Content two</h2>
+            <p class="column"> elit. Maecenas sit amet pretium urna.
+              Vivamus venenatis
+            </p>
+
+
+          </div>
+
+          <div class="column">
+
+
+            <img src="river.jpeg" alt="no picture" class="column">
+            <h2 class="column">Content three</h2>
+            <p class="column">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+
+
+          </div>
+
+          <div class="column">
+
+            <img src="paris.jpeg" alt="no picture" class="column">
+            <h2 class="column">Content four</h2>
+            <p class="column">Lorem ipsum dolor sit amet, consectetur</p>
+
+          </div>
+
+
+        </div>
+    </main>
+
+
+  </div>
 </body>
 
 </html>
