added css for tablet query

--- a/code/index.html
+++ b/code/index.html
@@ -39,21 +39,21 @@
 
 
 
-    <section class="flex-container">
+    <section class="flex-container-small flex-container-medium">
       <!-- The other news  -->
       <a href="http://" target="_blank" rel="noopener noreferrer">
         <article class="small-card">
-          <img src="../img/DT_2020.jpg" alt="">
-          <h3 class="small-h3">Breaking News!</h3>
-          <p class="small-text">Donalt Trump re-elected! </p>
+          <img src="../img/RM.jpeg" alt="">
+          <h3 class="small-h3">You decide</h3>
+          <p class="small-text">Family guy or simpsons? </p>
         </article>
       </a>
 
       <a href="http://" target="_blank" rel="noopener noreferrer">
         <article class="small-card">
-          <img src="../img/DT_2020.jpg" alt="">
-          <h3 class="small-h3">Breaking News!</h3>
-          <p class="small-text">Donalt Trump re-elected! </p>
+          <img src="../img/ernst.jpg" alt="">
+          <h3 class="small-h3">Read it all!</h3>
+          <p class="small-text">Ernst best wedding tips! </p>
         </article>
       </a>
 
@@ -111,7 +111,7 @@
       <!-- Team Elephants! -->
       <!-- Github, linkedin links? -->
       <a href="#top" class="footer-link">Back to top</a>
-      <p class="footer-text">&#128024;</p>
+      <p class="emoji">&#128024;</p>
     </footer>
 
   </body>
@@ -126,6 +126,7 @@
 
 Donald trump re-elected? rickrolled link?
 Ernst?
+
 
 
  -->
