inserted main elements in html including logo and images, started updating CSS from a mobile first perspective to roughly see where the different sections will end up, has started using flexbox but it needs to be updated

--- a/code/index.html
+++ b/code/index.html
@@ -6,21 +6,78 @@
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Radley|Roboto&display=swap" rel="stylesheet">
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
+    <img class="logo" src="ripe-bananas-logo.png">
+    <nav>
+      <a href="...">...</a>
+      <a href="...">...</a>
+      <a href="...">...</a>
+      <a href="...">...</a>
+    </nav>
   </header>
 
   <section class="big-news">
     <!-- The big news content -->
+    <img class="image-big-news" src="banana-pink.jpg">
+    <section class="big-news-text">
+      <h1>Colombia declares national emergency</h1>
+      <p class="big-news-paragraph">Fungus devastating banana crops found &#62;</p>
+    </section>
   </section>
 
-  <section class="">
+  <section class="other-news">
     <!-- The other news  -->
+    <section class="small-news">
+      <img class="image-small-news" src="banana-monkey.jpg">
+      <h2>Small 1</h2>
+      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+    </section>
+    <section class="small-news">
+      <img class="image-small-news" src="banana-tape.jpg">
+      <h2>Small 2</h2>
+      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+    </section>
+    <section class="small-news">
+      <img class="image-small-news" src="banana-plant.jpg">
+      <h2>Small 3</h2>
+      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+    </section>
+    <section class="small-news">
+      <img class="image-small-news" src="banana-plate.jpg">
+      <h2>Small 4</h2>
+      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+    </section>
+    <section class="small-news">
+      <img class="image-small-news" src="banana-ripe.jpg">
+      <h2>Small 5</h2>
+      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+    </section>
+    <section class="small-news">
+      <img class="image-small-news" src="travel.jpg">
+      <h2>Small 6</h2>
+      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+    </section>
+    <section class="small-news">
+      <img class="image-small-news" src="banana-leaf.jpg">
+      <h2>Small 7</h2>
+      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+    </section>
+    <section class="small-news">
+      <img class="image-small-news" src="banana-pile.jpg">
+      <h2>Small 8</h2>
+      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+    </section>
   </section>
+
+  <footer>
+    <p>...</p>
+  </footer>
 </body>
 
 </html>
