--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>GLO NEWS</title>
+  <link rel="icon" href="https://img.icons8.com/nolan/64/globe-earth.png" />
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400&display=swap" rel="stylesheet">
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
+
+<body>
+  <header class="header">
+    <h1>GL</h1><img src="globe.svg" alt="">
+    <h1>NEWS</h1>
+    <nav>
+      <a href="url">Home</a>
+      <a href="url">About</a>
+      <a href="url">Explore</a>
+      <a href="url">Subscribe</a>
+      <a href="url">Login</a>
+      <a href="https://www.facebook.com/">
+        <img src="https://img.icons8.com/nolan/64/facebook-circled.png">
+      </a>
+      <a href="https://twitter.com/">
+        <img src="https://img.icons8.com/nolan/64/twitter.png">
+      </a>
+      <a href="https://www.pinterest.com/">
+        <img src="https://img.icons8.com/nolan/64/pinterest.png">
+      </a>
+    </nav>
+  </header>
+
+  <section class="big-news">
+    <!-- The big news content -->
+  </section>
+
+  <section class="">
+    <!-- The other news  -->
+  </section>
+</body>
+
 </html>
