--- a/code/index.html
+++ b/code/index.html
@@ -13,33 +13,36 @@
 
 <body>
   <header class="header">
-    <h1>GL</h1><img src="globe.svg" alt="">
-    <h1>NEWS</h1>
+    <h1>GL<img src="globe.svg" alt="">NEWS</h1>
     <nav>
       <a href="url">Home</a>
       <a href="url">About</a>
       <a href="url">Explore</a>
       <a href="url">Subscribe</a>
       <a href="url">Login</a>
-      <a href="https://www.facebook.com/">
-        <img src="https://img.icons8.com/nolan/64/facebook-circled.png">
-      </a>
-      <a href="https://twitter.com/">
-        <img src="https://img.icons8.com/nolan/64/twitter.png">
-      </a>
-      <a href="https://www.pinterest.com/">
-        <img src="https://img.icons8.com/nolan/64/pinterest.png">
-      </a>
     </nav>
   </header>
+  <main class="main-content">
+    <section class="big-news">
+      <!-- The big news content -->
+    </section>
 
-  <section class="big-news">
-    <!-- The big news content -->
-  </section>
+    <section class="">
+      <!-- The other news  -->
+    </section>
+  </main>
 
-  <section class="">
-    <!-- The other news  -->
-  </section>
+  <footer class="footer">
+    <a href="https://www.facebook.com/">
+      <img src="https://img.icons8.com/nolan/64/facebook-circled.png">
+    </a>
+    <a href="https://twitter.com/">
+      <img src="https://img.icons8.com/nolan/64/twitter.png">
+    </a>
+    <a href="https://www.pinterest.com/">
+      <img src="https://img.icons8.com/nolan/64/pinterest.png">
+    </a>
+  </footer>
 </body>
 
 </html>
