added main content

--- a/code/index.html
+++ b/code/index.html
@@ -12,24 +12,60 @@
 </head>
 
 <body>
-  <header class="header">
-    <h1>GL<img src="globe.svg" alt="">NEWS</h1>
-    <nav>
+
+  <header>
+
+    <h1><img src="globe.svg" alt="">Glo news</h1>
+
+    <nav class="navbar">
       <a href="url">Home</a>
       <a href="url">About</a>
       <a href="url">Explore</a>
       <a href="url">Subscribe</a>
       <a href="url">Login</a>
     </nav>
+
   </header>
+
   <main class="main-content">
+
     <section class="big-news">
-      <!-- The big news content -->
+      <img
+        src="https://images.unsplash.com/photo-1557825835-495b8f089eb6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+        alt="">
+      <aside>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Euismod in pellentesque massa placerat duis ultricies lacus sed. Aenean et tortor at risus
+        viverra adipiscing at in. In cursus turpis massa tincidunt dui ut ornare lectus. Risus nec feugiat in fermentum
+        posuere urna nec.</aside>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="small-news">
+      <img
+        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+        alt="">
+      <img
+        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+        alt="">
     </section>
+
   </main>
 
   <footer class="footer">
