added neon glow

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>GLO NEWS</title>
+  <title>GLO news</title>
   <link rel="icon" href="https://img.icons8.com/nolan/64/globe-earth.png" />
   <link rel="stylesheet" href="./style.css" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
   <header>
 
-    <h1><img src="globe.svg" alt="">Glo news</h1>
+    <h1><img src="globe.svg" alt=""><a href="url">GLO</a> news</h1>
 
     <nav class="navbar">
       <a href="url">Home</a>
