organized the CSS file and updated some styling learned from the Noops Clone video, made all news cards links.

--- a/code/index.html
+++ b/code/index.html
@@ -15,15 +15,16 @@
     <!-- Some kind of logo and navbar -->
     <img class="logo" src="ripe-bananas-logo.png">
     <nav>
-      <a href="...">...</a>
-      <a href="...">...</a>
-      <a href="...">...</a>
-      <a href="...">...</a>
+      <a href="#">...</a>
+      <a href="#">...</a>
+      <a href="#">...</a>
+      <a href="#">...</a>
     </nav>
   </header>
 
+  <!-- The big news content -->
+
   <section class="big-news">
-    <!-- The big news content -->
     <img class="image-big-news" src="banana-pink.jpg">
     <section class="big-news-text">
       <h1>Colombia declares national emergency</h1>
@@ -31,47 +32,50 @@
     </section>
   </section>
 
+  <!-- The other news  -->
+
   <section class="other-news">
-    <!-- The other news  -->
-    <section class="small-news">
-      <img class="image-small-news" src="banana-monkey.jpg">
-      <h2>Small 1</h2>
-      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
-    </section>
-    <section class="small-news">
-      <img class="image-small-news" src="banana-tape.jpg">
-      <h2>Small 2</h2>
-      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
-    </section>
-    <section class="small-news">
-      <img class="image-small-news" src="banana-plant.jpg">
-      <h2>Small 3</h2>
-      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
-    </section>
-    <section class="small-news">
-      <img class="image-small-news" src="banana-plate.jpg">
-      <h2>Small 4</h2>
-      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
-    </section>
-    <section class="small-news">
-      <img class="image-small-news" src="banana-ripe.jpg">
-      <h2>Small 5</h2>
-      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
-    </section>
-    <section class="small-news">
-      <img class="image-small-news" src="travel.jpg">
-      <h2>Small 6</h2>
-      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
-    </section>
-    <section class="small-news">
-      <img class="image-small-news" src="banana-leaf.jpg">
-      <h2>Small 7</h2>
-      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
-    </section>
-    <section class="small-news">
-      <img class="image-small-news" src="banana-pile.jpg">
-      <h2>Small 8</h2>
-      <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+    <section class="small-news-card">
+      <a href="#">
+        <img class="image-small-news" src="banana-monkey.jpg">
+        <h2>Small 1</h2>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
+      <a href="#">
+        <img class="image-small-news" src="banana-tape.jpg">
+        <h2>Small 2</h2>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
+      <a href="#">
+        <img class="image-small-news" src="banana-plant.jpg">
+        <h2>Small 3</h2>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
+      <a href="#">
+        <img class="image-small-news" src="banana-plate.jpg">
+        <h2>Small 4</h2>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
+      <a href="#">
+        <img class="image-small-news" src="banana-ripe.jpg">
+        <h2>Small 5</h2>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
+      <a href="#">
+        <img class="image-small-news" src="travel.jpg">
+        <h2>Small 6</h2>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
+      <a href="#">
+        <img class="image-small-news" src="banana-leaf.jpg">
+        <h2>Small 7</h2>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
+      <a href="#">
+        <img class="image-small-news" src="banana-pile.jpg">
+        <h2>Small 8</h2>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
     </section>
   </section>
 
