--- a/code/index.html
+++ b/code/index.html
@@ -15,56 +15,54 @@
 
   <header>
 
-    <h1><img src="globe.svg" alt=""><a href="url">GLO</a> news</h1>
+    <h1><img src="globe.svg" style="margin-right: 15px;"><a href="url">GLO</a> news</h1>
 
     <nav class="navbar">
-      <a href="url">Home</a>
-      <a href="url">About</a>
-      <a href="url">Explore</a>
-      <a href="url">Subscribe</a>
-      <a href="url">Login</a>
+      <button data-hover="Back at it!">
+        <div>Home</div>
+      </button>
+      <button data-hover="Wiki Glo!">
+        <div>About</div>
+      </button>
+      <button data-hover="Dora!">
+        <div>Explore</div>
+      </button>
+      <button data-hover="Stay fab!">
+        <div>Trends</div>
+      </button>
+      <button data-hover="Wohoo!">
+        <div>Subscribe</div>
+      </button>
     </nav>
-
   </header>
 
   <main class="main-content">
 
-    <section class="big-news">
-      <img
-        src="https://images.unsplash.com/photo-1557825835-495b8f089eb6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
-        alt="">
-      <aside>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua. Euismod in pellentesque massa placerat duis ultricies lacus sed. Aenean et tortor at risus
-        viverra adipiscing at in. In cursus turpis massa tincidunt dui ut ornare lectus. Risus nec feugiat in fermentum
-        posuere urna nec.</aside>
-    </section>
+    <img
+      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+      alt="">
+    <img
+      src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
+      alt="">
+    <img
+      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+      alt="">
+    <img
+      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+      alt="">
+    <img
+      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+      alt="">
+    <img
+      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+      alt="">
+    <img
+      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+      alt="">
+    <img
+      src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+      alt="">
 
-    <section class="small-news">
-      <img
-        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
-        alt="">
-      <img
-        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
-        alt="">
-      <img
-        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
-        alt="">
-      <img
-        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
-        alt="">
-      <img
-        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
-        alt="">
-      <img
-        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
-        alt="">
-      <img
-        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
-        alt="">
-      <img
-        src="https://images.unsplash.com/photo-1575318634028-6a0cfcb60c59?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
-        alt="">
-    </section>
 
   </main>
 
