added html and css

--- a/code/index.html
+++ b/code/index.html
@@ -3,24 +3,197 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Project 2: The News Site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Technigo Student News</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
   <header>
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <img src="logo.svg" alt="technigoLogo">
+    <nav>
+      <a href="#">TOP NEWS1</a>
+      <a href="#">TOP NEWS2</a>
+      <a href="#">TOP NEWS3</a>
+    </nav>
     <!-- Some kind of logo and navbar -->
   </header>
 
-  <section class="big-news">
-    <!-- The big news content -->
+  <section class="main-news">
+    <section class="container">
+      <div>
+        <h2>OMG, THIS IS WHAT I LEARNED!</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero fugit sed porro beatae consequatur illum
+          architecto.
+        </p>
+      </div>
+      <img src="omg.jpg" alt="omg image">
+    </section>
   </section>
-
-  <section class="">
-    <!-- The other news  -->
+  <section class="grid-news">
+    <section class="container">
+      <h3>Lorem ipsum</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      </p>
+      <h3>Lorem ipsum</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      </p>
+      <section class="grid-news-boxes">
+        <a href="">
+          <div>
+            <figure class="circles">
+              <span></span>
+              <span></span>
+            </figure>
+            <p>THIS IS NEWS</p>
+            <h4>THIS AS WELL</h4>
+          </div>
+          <img src="nature.jpg" alt="natureImage">
+          <p>THIS IS ALSO NEWS</p>
+        </a>
+      </section>
+    </section>
   </section>
-
+  <section class="grid-news">
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <section class="grid-news-boxes">
+      <a href="">
+        <div>
+          <figure class="circles">
+            <span></span>
+            <span></span>
+          </figure>
+          <p>THIS IS NEWS</p>
+          <h4>THIS AS WELL</h4>
+        </div>
+        <img src="nature.jpg" alt="natureImage">
+        <p>THIS IS ALSO NEWS</p>
+      </a>
+    </section>
+  </section>
+  <section class="grid-news">
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <section class="grid-news-boxes">
+      <a href="">
+        <div>
+          <figure class="circles">
+            <span></span>
+            <span></span>
+          </figure>
+          <p>THIS IS NEWS</p>
+          <h4>THIS AS WELL</h4>
+        </div>
+        <img src="nature.jpg" alt="natureImage">
+        <p>THIS IS ALSO NEWS</p>
+      </a>
+    </section>
+  </section>
+  <section class="grid-news">
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <section class="grid-news-boxes">
+      <a href="">
+        <div>
+          <figure class="circles">
+            <span></span>
+            <span></span>
+          </figure>
+          <p>THIS IS NEWS</p>
+          <h4>THIS AS WELL</h4>
+        </div>
+        <img src="nature.jpg" alt="natureImage">
+        <p>THIS IS ALSO NEWS</p>
+      </a>
+    </section>
+  </section>
+  <section class="grid-news">
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <section class="grid-news-boxes">
+      <a href="">
+        <div>
+          <figure class="circles">
+            <span></span>
+            <span></span>
+          </figure>
+          <p>THIS IS NEWS</p>
+          <h4>THIS AS WELL</h4>
+        </div>
+        <img src="nature.jpg" alt="natureImage">
+        <p>THIS IS ALSO NEWS</p>
+      </a>
+    </section>
+  </section>
+  <section class="grid-news">
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <h3>Lorem ipsum</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <section class="grid-news-boxes">
+      <a href="">
+        <div>
+          <figure class="circles">
+            <span></span>
+            <span></span>
+          </figure>
+          <p>THIS IS NEWS</p>
+          <h4>THIS AS WELL</h4>
+        </div>
+        <img src="nature.jpg" alt="natureImage">
+        <p>THIS IS ALSO NEWS</p>
+      </a>
+    </section>
+  </section>
   <footer></footer>
 </body>
 
