This site works, scaling and window-modes

--- a/code/index.html
+++ b/code/index.html
@@ -6,72 +6,84 @@
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
-  <div class="container">
+  <div id="box">
     <header>
-      <h1>Header</h1>
-      <p>Resize the browser window to see the responsive effect.</p>
+      <!-- <h1>Header</h1>
+      <p>Resize the browser window to see the responsive effect.</p> -->
+      <a href="https://en.wikipedia.org/wiki/Code_review" title="wikipedia on Code review">code review.</a>
+      <a href="https://en.wikipedia.org/wiki/Peer_review" title="wikipedia on Peer review"> peer review.</a>
+      <a href="https://smartbear.com/learn/code-review/best-practices-for-peer-code-review/"
+        title="Smartbear on Code review">Best practices</a>
+
       <!-- Some kind of logo and navbar -->
-      <div class="topnav">
+      <!-- <div class="topnav">
         <a href="#">Link</a>
         <a href="#">Link</a>
         <a href="#">Link</a>
-      </div>
+      </div> -->
+
     </header>
     <main>
       <section class="big-news">
         <!-- The big news content -->
-        <img src="">
+        <img src="#">
 
-        <div class="row">
-
-          <div class="column">
-
-
-            <img src="dogs.jpg" alt="no picture" class="column">
-            <h2 class="column">Main Content</h2>
-            <p class="column">Lorem adipiscing elit. Maecenas sit amet pretium urna.
-            </p>
-
-          </div>
-
-          <div class="column">
-
-            <img src="bridge.jpeg" alt="no picture" class="column">
-            <h2 class="column">Content two</h2>
-            <p class="column"> elit. Maecenas sit amet pretium urna.
-              Vivamus venenatis
-            </p>
+      </section>
+      <section class="row">
 
 
-          </div>
-
-          <div class="column">
+        <div class="column">
 
 
-            <img src="river.jpeg" alt="no picture" class="column">
-            <h2 class="column">Content three</h2>
-            <p class="column">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </p>
+          <img src="dogs.jpg" alt="no picture" class="column">
+          <h2 class="column">Main Content</h2>
+          <p class="column">Lorem adipiscing elit. Maecenas sit amet pretium urna.
+          </p>
 
+        </div>
 
-          </div>
+        <div class="column">
 
-          <div class="column">
-
-            <img src="paris.jpeg" alt="no picture" class="column">
-            <h2 class="column">Content four</h2>
-            <p class="column">Lorem ipsum dolor sit amet, consectetur</p>
-
-          </div>
+          <img src="bridge.jpeg" alt="no picture" class="column">
+          <h2 class="column">Content two</h2>
+          <p class="column"> elit. Maecenas sit amet pretium urna.
+            Vivamus venenatis
+          </p>
 
 
         </div>
-    </main>
 
+        <div class="column">
+
+
+          <img src="river.jpeg" alt="no picture" class="column">
+          <h2 class="column">Content three</h2>
+          <p class="column">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+
+
+        </div>
+
+        <div class="column">
+
+          <img src="paris.jpeg" alt="no picture" class="column">
+          <h2 class="column">Content four</h2>
+          <p class="column">Lorem ipsum dolor sit amet, consectetur</p>
+
+        </div>
+      </section>
+
+
+    </main>
+    <footer>
+      <p>Footer</p>
+    </footer>
 
   </div>
 </body>
